make datasets target-scoped and scenarios optional
